Fixed usage of csv with backslashes and switched from SWT to swing